update switches and use List.of() in constant files